# scaling-operator-learning

./: .gitignore  AGENT_PROMPT.md  AUDIT.md  CLAIM_AUDIT.md  DECISIONS_PENDING.md  INDEPENDENT_ANALYSIS_REPORT.md  PROTOCOL_V2.md  README.md  RESULTS_CONVERGENCE.md  RESULTS_RESPONSE_SURFACES.md  RESULTS_TRANSFER.md  ROADMAP.md  ROADMAP_EXECUTION_PODS.md  STEERING_INBOX.md  STEERING_LOG.md  VALIDATION_REPORT.md  pyproject.toml
configs/: burgers_operator.yaml  burgers_operator_dense_N.yaml  burgers_operator_wide_R.yaml  darcy.yaml  darcy_dense_N.yaml  darcy_wide_R.yaml  diffusion.yaml  diffusion_dense_N.yaml  diffusion_filtered.yaml  diffusion_wide_R.yaml
paper/: main.tex  main_v1.tex  main_v2.tex  main_v3.tex  main_v4.tex
paper-reviews/: review-2026-04-07-001.tex
results/: cell_coverage_crossres.csv  cell_coverage_diagonal.csv  cell_regimes.csv  cell_stats_crossres.csv  cell_stats_diagonal.csv  marginal_value_of_resolution.csv  transfer_scores.csv
scripts/: aggregate_cells.py  aggregate_runs.py  build_transfer_matrices.py  chain_after_ablation.sh  compute_regime_labels.py  connect_pods.sh  enumerate_cell_coverage.py  independent_analysis.py  monitor_pods.sh  plot_convergence.py  plot_figures.py  plot_figures_pertask.py  plot_multilaw_figures.py  plot_response_surfaces.py  pod_setup_and_run.sh  pull_and_plot.sh  pull_results.sh  repro_r48_data_bug.py  run_analysis.py  run_deeponet_ablation.py  run_fast_analysis.py  run_holdout_contest.py  run_multilaw_analysis.py  run_optimizer_ablation.py  run_pipeline.sh  run_sweep.py  run_tier3_all.sh  (+1 more)
tests/: test_analysis.py  (+2 more)
(+1431 files in other folders)
